<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@color/blue"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.68"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="40dp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.20"
            android:contentDescription="@string/logo"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_gal"
            android:src="@drawable/add_film" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:gravity="center|bottom"
            android:text="@string/add_Film"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="30dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_name"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/tittle" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_description"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/editResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="@string/summ" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_see"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <CheckBox
            android:id="@+id/CheckNo"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/film_opt3"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <CheckBox
            android:id="@+id/CheckNoWant"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/film_op4"
            android:textColor="@color/white"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <CheckBox
            android:id="@+id/checkYes"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:text="@string/film_opt1"
            android:textColor="@color/white"
            android:textSize="10dp" />

        <CheckBox
            android:id="@+id/CheckYesWant"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/film_opt2"
            android:textColor="@color/white"
            android:textSize="10dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film_see"
        android:textColor="@color/white" />

    <RatingBar
        android:id="@+id/ratingBar1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_gal"
            android:src="@drawable/add_film" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="92dp"
            android:layout_height="63dp"
            android:layout_marginLeft="125dp"
            android:contentDescription="@string/img_gal"
            android:src="@drawable/back_icon" />
    </LinearLayout>

</LinearLayout>